remove extra files

--- a/dashboard_enhanced.html
+++ b/dashboard_enhanced.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🤖 Trading Bot Dashboard</h1>
+            <h1>Trading Bot Dashboard</h1>
             <p>Real-time signals, trades, and performance metrics</p>
         </div>
 
