Improving UI and make balance and floating P&L visible

--- a/dashboard_enhanced.html
+++ b/dashboard_enhanced.html
@@ -24,11 +24,11 @@
             </div>
             <div class="status-card">
                 <div class="status-label">Account Balance</div>
-                <div class="status-value" id="account-balance">$10,000</div>
+                <div class="status-value" id="account-balance">-</div>
             </div>
             <div class="status-card">
                 <div class="status-label">Floating P&L</div>
-                <div class="status-value" id="floating-pnl">+$0</div>
+                <div class="status-value" id="floating-pnl">-</div>
             </div>
             <div class="status-card">
                 <div class="status-label">Open Positions</div>
@@ -87,11 +87,11 @@
                     </div>
                     <div class="stat-box">
                         <div class="stat-label">Floating P&L</div>
-                        <div class="stat-value" id="stat-floating-pnl">+$0</div>
+                        <div class="stat-value" id="stat-floating-pnl">-</div>
                     </div>
                     <div class="stat-box">
                         <div class="stat-label">Account Balance</div>
-                        <div class="stat-value" id="stat-balance">$10,000</div>
+                        <div class="stat-value" id="stat-balance">-</div>
                     </div>
                 </div>
             </div>
